crates/iroha_config_base_derive/tests/ui_fail/generics.stderr
error: [derive(ReadConfig)]: generics are not supported
 --> tests/ui_fail/generics.rs:4:13
  |
4 | struct Test<T> {
  |             ^
