crates/iroha_config_base_derive/tests/ui_fail/generics.rs
use iroha_config_base::ReadConfig;

#[derive(ReadConfig)]
struct Test<T> {
    foo: T,
}

pub fn main() {}
